quanticol.ed.ac.uk.paloma/src/quanticol/ed/ac/uk/paloma/realparser/PalomaParser.java
/* Generated By:JavaCC: Do not edit this line. PalomaParser.java */
package quanticol.ed.ac.uk.paloma.realparser;

import quanticol.ed.ac.uk.paloma.framework.GlobalManager;
import quanticol.ed.ac.uk.paloma.framework.Agent;
import quanticol.ed.ac.uk.paloma.model.ExpEvaluator;
import quanticol.ed.ac.uk.paloma.model.State;
import quanticol.ed.ac.uk.paloma.model.action.*;
import quanticol.ed.ac.uk.paloma.utality.Utality;

/*package realparser;

import framework.GlobalManager;
import framework.Agent;
import model.ExpEvaluator;
import model.State;
import model.action.*;
import utality.Utality;*/


public class PalomaParser implements PalomaParserConstants {

    public PalomaParser() {
        this(new java.io.StringReader(""));
    }

    public void parseFromString( String modelDef ) throws ParseException, TokenMgrError, NumberFormatException {
        this.ReInit(new java.io.StringReader(modelDef));
        this.Start();
    }

    public void parseFromFile( String filename ) throws ParseException, TokenMgrError, NumberFormatException {
        try { this.ReInit(new java.io.FileReader(filename)); }
        catch(java.io.IOException e) {throw new ParseException("Error while opening file " + filename + ": " + e); }
        this.Start();
    }

/***********************************************
GRAMMAR RULES
***********************************************/
  final public void Start() throws ParseException, NumberFormatException, RuntimeException, ParseException {
    Token t;
    boolean states = false, agents = false, sub = false, comp = false, cont = false;
    jj_consume_token(SECTION_PARAM);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case KEYWORD_PARAM:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Param();
    }
    jj_consume_token(SECTION_STATES);
                 states = true;
    label_2:
    while (true) {
      State();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(SECTION_AGENTS);
     agents = true;
    Agent();
      if (!states && !agents)
        {if (true) throw new ParseException("Some model sections are missing");}
    jj_consume_token(0);
  }

  final public void Param() throws ParseException, NumberFormatException, RuntimeException, ParseException {
    Token t1,t2;
    State st;
    jj_consume_token(KEYWORD_PARAM);
    t1 = jj_consume_token(IDENTIFIER);
    jj_consume_token(ASSIGN);
    t2 = jj_consume_token(MATH_EXPR);
    jj_consume_token(EOL);
        double value = ExpEvaluator.evalParamExp(t2.image);
        if(value == Utality.ERROR_NUM) {
            {if (true) throw new ParseException("line " + t2.beginLine + " colum " + t2.beginColumn +": "+t1.image +" not correctly defined!");}
        }
        if(!GlobalManager.getParamManager().isParamExist(t1.image)) {
            GlobalManager.getParamManager().addParam(t1.image, value);
        }
  }

  final public void State() throws ParseException, NumberFormatException, RuntimeException, ParseException {
    Token t,x,y;
    State st;
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(LR);
    x = jj_consume_token(INT);
    jj_consume_token(COMMA);
    y = jj_consume_token(MATH_PARAM);
    jj_consume_token(RR);
     st = new State(t.image, Integer.parseInt(x.image), Integer.parseInt(y.image));
    jj_consume_token(DEFINE);
    Action(st);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(PLUS);
      Action(st);
    }
    jj_consume_token(EOL);
        GlobalManager.getStateManager().putState(st);
  }

  final public void Action(State st) throws ParseException, NumberFormatException, RuntimeException, ParseException {
    int type = Action.ACTION_TYPE_SpNoMsg;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LR:
    case QUEST:
    case EXCL:
      if (jj_2_1(2)) {
        SpNoMsgAction(st);
      } else if (jj_2_2(2)) {
        SpBrAction(st);
      } else if (jj_2_3(2)) {
        SpUnAction(st);
      } else if (jj_2_4(2)) {
        InBrAction(st);
      } else if (jj_2_5(2)) {
        InUnAction(st);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

  final public void SpNoMsgAction(State st) throws ParseException, NumberFormatException, RuntimeException, ParseException {
    Token name, rate=null, nextState, x, y;
    String strName = null;
    boolean paramRate = false;
    jj_consume_token(LR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      name = jj_consume_token(IDENTIFIER);
         strName = name.image;
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(COMMA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MATH_PARAM:
      rate = jj_consume_token(MATH_PARAM);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RR);
    jj_consume_token(DOT);
    nextState = jj_consume_token(IDENTIFIER);
    jj_consume_token(LR);
    x = jj_consume_token(INT);
    jj_consume_token(COMMA);
    y = jj_consume_token(MATH_PARAM);
    jj_consume_token(RR);
        double actionRate = ExpEvaluator.evalParamExp(rate.image);
        if(actionRate == Utality.ERROR_NUM || actionRate < 0) {
            {if (true) throw new ParseException("line " + rate.beginLine + " colum " + rate.beginColumn +": "+rate.image +" not correctly defined!");}
        }

        SpNoMsgAction ac = new SpNoMsgAction(strName, actionRate, State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image)));
        st.addAction(ac);
        if(GlobalManager.getOrphanMap().get(State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image))) == null) {
            GlobalManager.getOrphanMap().put(State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image)),-1);
        }
  }

  final public void SpBrAction(State st) throws ParseException, NumberFormatException, RuntimeException, ParseException {
    Token name, rate=null, nextState, x, y, range=null;
    String strName = null;
    boolean paramRate = false;
    jj_consume_token(EXCL);
    jj_consume_token(LR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      name = jj_consume_token(IDENTIFIER);
         strName = name.image;
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(COMMA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MATH_PARAM:
      rate = jj_consume_token(MATH_PARAM);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(RR);
    jj_consume_token(AT);
    jj_consume_token(KEYWORD_RNG);
    jj_consume_token(LBRAC);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MATH_EXPR:
      range = jj_consume_token(MATH_EXPR);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(RBRAC);
    jj_consume_token(DOT);
    nextState = jj_consume_token(IDENTIFIER);
    jj_consume_token(LR);
    x = jj_consume_token(INT);
    jj_consume_token(COMMA);
    y = jj_consume_token(MATH_PARAM);
    jj_consume_token(RR);
        double actionRate = ExpEvaluator.evalParamExp(rate.image);
        if(actionRate == Utality.ERROR_NUM || actionRate < 0) {
            {if (true) throw new ParseException("line " + rate.beginLine + " colum " + rate.beginColumn +": "+rate.image +" not correctly defined!");}
        }
        SpBrAction ac = new SpBrAction(strName, actionRate, range.image, State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image)));
        st.addAction(ac);
        if(GlobalManager.getOrphanMap().get(State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image))) == null) {
            GlobalManager.getOrphanMap().put(State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image)),-1);
        }
  }

  final public void SpUnAction(State st) throws ParseException, NumberFormatException, RuntimeException, ParseException {
    Token name, rate=null, nextState, x, y, range=null;
    String strName = null;
    boolean paramRate = false;
    jj_consume_token(EXCL);
    jj_consume_token(EXCL);
    jj_consume_token(LR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      name = jj_consume_token(IDENTIFIER);
         strName = name.image;
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(COMMA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MATH_PARAM:
      rate = jj_consume_token(MATH_PARAM);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(RR);
    jj_consume_token(AT);
    jj_consume_token(KEYWORD_RNG);
    jj_consume_token(LBRAC);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MATH_EXPR:
      range = jj_consume_token(MATH_EXPR);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(RBRAC);
    jj_consume_token(DOT);
    nextState = jj_consume_token(IDENTIFIER);
    jj_consume_token(LR);
    x = jj_consume_token(INT);
    jj_consume_token(COMMA);
    y = jj_consume_token(MATH_PARAM);
    jj_consume_token(RR);
        double actionRate = ExpEvaluator.evalParamExp(rate.image);
        if(actionRate == Utality.ERROR_NUM || actionRate < 0) {
            {if (true) throw new ParseException("line " + rate.beginLine + " colum " + rate.beginColumn +": "+rate.image +" not correctly defined!");}
        }
        SpUnAction ac = new SpUnAction(strName, actionRate, range.image, State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image)));
        st.addAction(ac);
        if(GlobalManager.getOrphanMap().get(State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image))) == null) {
            GlobalManager.getOrphanMap().put(State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image)),-1);
        }
  }

  final public void InUnAction(State st) throws ParseException, NumberFormatException, RuntimeException, ParseException {
    Token name, rate=null, nextState, x, y, pri=null;
    String strName = null;
    boolean paramRate = false;
    jj_consume_token(QUEST);
    jj_consume_token(QUEST);
    jj_consume_token(LR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      name = jj_consume_token(IDENTIFIER);
         strName = name.image;
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(COMMA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MATH_PARAM:
      rate = jj_consume_token(MATH_PARAM);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(RR);
    jj_consume_token(AT);
    jj_consume_token(KEYWORD_WT);
    jj_consume_token(LBRAC);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MATH_EXPR:
      pri = jj_consume_token(MATH_EXPR);
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(RBRAC);
    jj_consume_token(DOT);
    nextState = jj_consume_token(IDENTIFIER);
    jj_consume_token(LR);
    x = jj_consume_token(INT);
    jj_consume_token(COMMA);
    y = jj_consume_token(MATH_PARAM);
    jj_consume_token(RR);
        double actionRate = ExpEvaluator.evalParamExp(rate.image);
        if(actionRate == Utality.ERROR_NUM || actionRate < 0) {
            {if (true) throw new ParseException("line " + rate.beginLine + " colum " + rate.beginColumn +": "+rate.image +" not correctly defined!");}
        }
        InUnAction ac = new InUnAction(strName, actionRate, pri.image, State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image)));
        st.addAction(ac);
        if(GlobalManager.getOrphanMap().get(State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image))) == null) {
            GlobalManager.getOrphanMap().put(State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image)),-1);
        }
  }

  final public void InBrAction(State st) throws ParseException, NumberFormatException, RuntimeException, ParseException {
    Token name, rate=null, nextState, x, y, pr=null;
    String strName = null;
    boolean paramRate = false;
    jj_consume_token(QUEST);
    jj_consume_token(LR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      name = jj_consume_token(IDENTIFIER);
         strName = name.image;
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(COMMA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MATH_PARAM:
      rate = jj_consume_token(MATH_PARAM);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(RR);
    jj_consume_token(AT);
    jj_consume_token(KEYWORD_PR);
    jj_consume_token(LBRAC);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MATH_EXPR:
      pr = jj_consume_token(MATH_EXPR);
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(RBRAC);
    jj_consume_token(DOT);
    nextState = jj_consume_token(IDENTIFIER);
    jj_consume_token(LR);
    x = jj_consume_token(INT);
    jj_consume_token(COMMA);
    y = jj_consume_token(MATH_PARAM);
    jj_consume_token(RR);
        double actionRate = ExpEvaluator.evalParamExp(rate.image);
        if(actionRate == Utality.ERROR_NUM || actionRate < 0) {
            {if (true) throw new ParseException("line " + rate.beginLine + " colum " + rate.beginColumn +": "+rate.image +" not correctly defined!");}
        }
        InBrAction ac = new InBrAction(strName, actionRate, pr.image, State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image)));
        st.addAction(ac);
        if(GlobalManager.getOrphanMap().get(State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image))) == null) {
            GlobalManager.getOrphanMap().put(State.genStateID(nextState.image, Integer.parseInt(x.image), Integer.parseInt(y.image)),-1);
        }
  }

  final public void Agent() throws ParseException, NumberFormatException, RuntimeException, ParseException {
    AtomAgent();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARALLEL:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_4;
      }
      jj_consume_token(PARALLEL);
      AtomAgent();
    }
        for(String orphan: GlobalManager.getOrphanMap().keySet()) {
            if(GlobalManager.getStateManager().getState(orphan) == null) {
                int index = orphan.indexOf("(");
                String name = orphan.substring(0,index);
                String loc = orphan.substring(index);
                loc = loc.substring(1,loc.indexOf(")"));
                String[] xy = loc.split(",");
                String x = xy[0]; String y = xy[1];
                State st = new State(name, Integer.parseInt(x), Integer.parseInt(y));
                GlobalManager.getStateManager().putState(st);
            }
        }
  }

  final public void AtomAgent() throws ParseException, NumberFormatException, RuntimeException, ParseException {
    Token t,x,y,t2=null;
    State st;
    int num = 1;
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(LR);
    x = jj_consume_token(INT);
    jj_consume_token(COMMA);
    y = jj_consume_token(MATH_PARAM);
    jj_consume_token(RR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LSQ:
      jj_consume_token(LSQ);
      t2 = jj_consume_token(INT);
      jj_consume_token(RSQ);
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
        if(t2 != null) {
                num = Integer.parseInt(t2.image);
        }

        Agent ag = new Agent(State.genStateID(t.image, Integer.parseInt(x.image), Integer.parseInt(y.image)), num);
        GlobalManager.addAgent(ag);
  }
